Version 2.1.100
    Corrected some mistakes made in the updated Russian locale (thanks myfbone!)
    mcnotify command now checks that it's being executed by a player
    Fixed some concurrency concerns around BleedTasks
    Fixed an NPE that may occur with random chances on a player without loaded data

Version 2.1.99
    MASSIVE update to the Russian locale (ru) credit to myfbone
    Debug mode (/mmodebug) will now print info about XP perks and how they are modifying your incoming XP

Version 2.1.98
    Fixed a bug that prevented Taming XP from combat

Version 2.1.97
    mcMMO is compatible with 1.14.4 (Didn't require any changes)
    Fixed a NPE that could occur if a pet participated in combat and its master's mcMMO data was not available
    mcMMO now properly closes its region files as it creates them (thanks Yukiiro-Nite)
    Updated Hungarian locale (thanks andris)

Version 2.1.96
    Added the setting 'Skills.General.LimitBreak.AllowPVE' to advanced.yml to allow Limit Break damage bonus to apply in PVE again, defaults to false
    Updated Limit Break locale strings
    Fixed a few more places where 'Archaeology' was misspelled in the locale
    Added the setting 'ExploitFix.PistonCheating' to experience.yml at the request of a user
    Added a missing 's' to Nether_Bricks (thanks Sikatsu) in experience.yml

    NOTES:
    The Skill Tooltips are a bit limited right now, in the future they will be more flexible. In order to reflect that Limit Break doesn't always work in PVE (now up to server settings) I added a crappy note to its hover window tip. I'll be fixing this in the future.
    You shouldn't need to update you config entry for Nether_Bricks, I believe that file updates automatically (the old config system is a bit janky, some stuff updates, some other stuff doesn't.)
    PistonCheating prevents blocks from being marked "natural" once they've been moved, we've never had an option for this before.